data/all_generated_tests/raw_wast_tests/call_StackCorruption_3211.wast
;; 10. **Test Description**: Interleave function calls with direct stack manipulation instructions (e.g., `drop`, `dup`) and confirm the stack remains in a valid state after the interleaving operation.    **Constraint Checked**: Direct stack manipulation mixed with function calls.    **Relation to Stack Corruption**: Direct stack operations can easily disrupt function call expectations if not carefully managed.

(assert_invalid
  (module
    (func $main
      (i32.const 0) (i32.const 1)
      (call $duplicateTop)
      (drop)
      (call $addTwo)
    )
    (func $duplicateTop
      (i32.const 2)
    )
    (func $addTwo
      (param i32 i32)
      (result i32)
      (i32.add)
    )
  )
  "type mismatch"
)